# web-portal/backend/openapi.yaml
@@ -7,7 +7,7 @@ servers:
   - url: http://localhost:8080
     description: Development server
 paths:
-  /timesheet/entries:
+  /entries:
     get:
       summary: Get timesheet
       responses:
@@ -25,7 +25,7 @@ paths:
           description: Authentication failed
         '500':
           description: Internal server error
-  /timesheet/entry:
+  /entry:
     post:
       summary: Post timesheet entry
       requestBody:
